Fin de la premiere tache

--- a/code/0/Makefile
+++ b/code/0/Makefile
@@ -6,24 +6,22 @@
 #    By: yzaoui <yzaoui@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/11/11 03:10:21 by yzaoui            #+#    #+#              #
-#    Updated: 2023/11/11 03:39:18 by yzaoui           ###   ########.fr        #
+#    Updated: 2023/11/13 02:08:52 by yzaoui           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 ############### OBJ de Minishell
 
-MINISHELL_PATH =	./Source/
+MINISHELL_PATH = Source/
+MINISHELL_FILES = main.c
+MINISHELL_SRC = ${addprefix ${MINISHELL_PATH}, ${MINISHELL_FILES}}
 
-MINISHELL_FILES =	main.c
-
-MINISHELL_SRC =	${addprefix ${MINISHELL_PATH}, ${MINISHELL_FILES}}
-
-OBJ_MINISHELL = ${MINISHELL_SRC:.c=.o}
+OBJ_PATH = obj/
+MINISHELL_OBJ = ${addprefix ${OBJ_PATH}, ${MINISHELL_FILES:.c=.o}}
 
 ############### ligne de commande
 
 RM = rm -rf
-
 CC = cc
 C_FLAGS = -g3 -Wall -Wextra -Werror
 
@@ -31,18 +29,23 @@ PROGRAM_NAME = minishell
 
 ############### COMMANDE OBLIGATOIRE
 
-${PROGRAM_NAME}: ${OBJ_MINISHELL}
-	${CC} ${C_FLAGS} ${OBJ_MINISHELL} -o ${PROGRAM_NAME}
+.PHONY: all clean fclean re
 
-all : ${PROGRAM_NAME}
+all: $(OBJ_PATH) ${PROGRAM_NAME}
 
-.c.o:
-	${CC} ${C_FLAGS} -c $< -o ${<:.c=.o}
+${PROGRAM_NAME}: ${MINISHELL_OBJ}
+	$(CC) $(C_FLAGS) ${MINISHELL_OBJ} -o ${PROGRAM_NAME}
 
-clean :
-	${RM} ${OBJ_MINISHELL}
+$(OBJ_PATH)%.o: $(MINISHELL_SRC)
+	$(CC) $(C_FLAGS) -c $< -o $@
 
-fclean : clean
-	${RM} ${PROGRAM_NAME}
+$(OBJ_PATH):
+	mkdir -p $(OBJ_PATH)
 
-re : fclean all
+clean:
+	$(RM) $(OBJ_PATH)
+
+fclean: clean
+	$(RM) ${PROGRAM_NAME}
+
+re: fclean all
