--- a/code/Ebauche/Makefile
+++ b/code/Ebauche/Makefile
@@ -6,7 +6,7 @@
 #    By: yzaoui <yzaoui@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/11/11 03:10:21 by yzaoui            #+#    #+#              #
-#    Updated: 2023/12/12 20:22:12 by yzaoui           ###   ########.fr        #
+#    Updated: 2023/12/15 11:19:53 by yzaoui           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,13 +14,17 @@
 
 FT_UTILE_PATH = fonction_utile/
 FT_UTILE_FILES =	ft_strcpm.c	\
-					ft_strlen.c
+					ft_strlen.c	\
+					ft_calloc.c	\
+					ft_strcpy.c
 
 INUTILE_PATH = inutile/
 INUTILE_FILES = color.c
 
 STRUCT_PATH = struct/
-STRUCT_FILES = init_all.c
+STRUCT_FILES = 	initfree_all.c	\
+				initfree_node.c	\
+				initfree_prompt.c
 
 MINISHELL_PATH = Source/
 MINISHELL_FILES =	main.c 				\
