--- a/code/Ebauche/Makefile
+++ b/code/Ebauche/Makefile
@@ -6,7 +6,7 @@
 #    By: yzaoui <yzaoui@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/11/11 03:10:21 by yzaoui            #+#    #+#              #
-#    Updated: 2023/12/17 22:41:34 by yzaoui           ###   ########.fr        #
+#    Updated: 2023/12/19 01:17:26 by yzaoui           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -22,6 +22,10 @@ INUTILE_PATH = inutile/
 INUTILE_FILES = color.c	\
 				show_struct.c
 
+PARSING_PATH = parsing/
+PARSING_FILES =	invite_de_comande.c	\
+				
+
 STRUCT_PATH = struct/
 STRUCT_FILES = 	initfree_all.c	\
 				initfree_node.c	\
@@ -29,10 +33,10 @@ STRUCT_FILES = 	initfree_all.c	\
 
 MINISHELL_PATH = Source/
 MINISHELL_FILES =	main.c 				\
-					invite_de_comande.c	\
 					error.c				\
 					${addprefix ${FT_UTILE_PATH}, ${FT_UTILE_FILES}}	\
 					${addprefix ${INUTILE_PATH}, ${INUTILE_FILES}}		\
+					${addprefix ${PARSING_PATH}, ${PARSING_FILES}}		\
 					${addprefix ${STRUCT_PATH}, ${STRUCT_FILES}}
 
 OBJ_PATH = obj/
