javance sur le parsing

--- a/code/Ebauche/Makefile
+++ b/code/Ebauche/Makefile
@@ -6,27 +6,31 @@
 #    By: yzaoui <yzaoui@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/11/11 03:10:21 by yzaoui            #+#    #+#              #
-#    Updated: 2023/12/23 22:39:04 by yzaoui           ###   ########.fr        #
+#    Updated: 2023/12/24 19:13:43 by yzaoui           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 ############### OBJ de Minishell
 
 FT_UTILE_PATH = fonction_utile/
-FT_UTILE_FILES =	ft_strcpm.c	\
-					ft_strlen.c	\
-					ft_calloc.c	\
-					ft_strcpy.c	\
-					va_env1.c
+FT_UTILE_FILES =	ft_strcpm.c		\
+					ft_strlen.c		\
+					ft_calloc.c		\
+					ft_strcpy.c		\
+					va_env1.c		\
+					manip_node.c	\
+					type_of_str.c	\
+					ft_strjoin.c
 
 INUTILE_PATH = inutile/
 INUTILE_FILES = color.c	\
 				show_struct.c
 
 PARSING_PATH = parsing/
-PARSING_FILES =	invite_de_comande.c	\
-				parsing.c			\
-				first_parsing.c
+PARSING_FILES =	first_parsing.c				\
+				invite_de_comande.c			\
+				manipulation_all_cmd_line.c	\
+				parsing.c
 
 STRUCT_PATH = struct/
 STRUCT_FILES = 	initfree_all.c	\
