--- a/code/parsing2/.vscode/settings.json
+++ b/code/parsing2/.vscode/settings.json
@@ -1,8 +1,6 @@
 {
 	"files.associations": {
-		"minishell.h": "c",
-		"struct.h": "c",
-		"import.h": "c"
+		"minishell.h": "c"
 	},
 	"C_Cpp.errorSquiggles": "disabled"
 }
