--- a/code/second_fusion/.vscode/settings.json
+++ b/code/second_fusion/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
 	"files.associations": {
 		"minishell.h": "c",
-		"struct.h": "c"
+		"struct.h": "c",
+		"import.h": "c",
+		"constante.h": "c"
 	},
 	"C_Cpp.errorSquiggles": "disabled"
 }
