--- a/code/rendu_signal/Makefile
+++ b/code/rendu_signal/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: yzaoui <yzaoui@student.42.fr>              +#+  +:+       +#+         #
+#    By: ilouacha <ilouacha@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/11/11 03:10:21 by yzaoui            #+#    #+#              #
-#    Updated: 2024/02/04 21:09:38 by yzaoui           ###   ########.fr        #
+#    Updated: 2024/02/08 12:22:22 by ilouacha         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -19,6 +19,7 @@ ILHAM_GESTION_FILES =	exec_parsing.c		\
 						redirect2.c			\
 						shell_execution.c	\
 						utils.c				\
+						signals.c			\
 
 BULTINS_PATH =	builtins/
 BULTINS_FILES =	cd.c			\
